2013-02-14  e83abe1                  [RELEASE] Release of TYPO3 4.7.8 (TYPO3 Release Team)
2013-02-14  71ef699  #44099          [BUGFIX] L10n fallback does not work for TS labels (Xavier Perseguers)
2013-02-14  f2aeff0  #44273          [BUGFIX] L10n fallback does not work for ExtJS in BE (Xavier Perseguers)
2013-02-14  a930bdf                  [TASK] Raise submodule pointer (TYPO3 Release Team)
2013-02-14  915bf76  #42084          [BUGFIX] Allow "en" as language key (Xavier Perseguers)
2013-02-08  efbce7b                  [TASK] Raise submodule pointer (Christian Kuhn)
2013-02-07  f1c43bb  #34129          [BUGFIX][Cache][PDO] Duplicate cache entry possible (Leon Dietsch)
2013-02-03  a0cf1c9  #36364          [BUGFIX] IE9 compatibility clear cache menu (Andreas Kiessling)
2013-02-02  44942df  #44416          [BUGFIX] Hook call modifyDBRow in ContentContentObject (Alina Fleser)
2013-02-02  9dba7d3  #43886          [BUGFIX] Fix misspelling in RTE meta menu (Tomita Militaru)
2013-02-02  b088faa  #38505          [BUGFIX] load TCA before manipulation (Jigal van Hemert)
2013-02-01  c81aa5f  #28606          [BUGFIX] add check for empty form values in FORM View (Christian Kuhn)
2013-01-31  850a316  #45050          [TASK] DataHandler::getAutoVersionId() should be public (Oliver Hader)
2013-01-28  d8c61c6  #44892          [BUGFIX] Possible warning in about module (Christian Kuhn)
2013-01-27  dcb3a23  #42845          [BUGFIX] Quick Edit triggers warnings of missing key uid (Philipp Gampe)
2013-01-26  d2d5127                  [TASK] Raise submodule pointer (Christian Kuhn)
2013-01-25  3845cc6  #39680          [BUGFIX] Fix warnings in em on tab Maintenance (Philipp Gampe)
2013-01-25  9eca09b  #19938,#23324,  [BUGFIX] EXT:felogin: Multiple bugs with preserveGETvars (Jigal van Hemert)
2013-01-25  c62aca6  #44145          [BUGFIX] Correct TCA inclusion for uploads rendering (Georg Ringer)